--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "reactjs-popup": "^2.0.6",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
