--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^22.13.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "concurrently": "^9.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
