--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-steam": "^1.0.18"
   }
 }
