--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.13.14",
+    "@types/passport-steam": "^1.0.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^9.1.2",
