--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "express-session": "^1.18.1",
     "firebase-admin": "^13.2.0",
     "openid-client": "^6.4.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -29,6 +32,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.13.14",
+    "@types/passport-oauth2": "^1.4.17",
     "@types/passport-steam": "^1.0.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
