--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,9 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },  
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
